--- a/tutorial0/checkpoint0.ipynb
+++ b/tutorial0/checkpoint0.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -30,18 +30,29 @@
    "outputs": [],
    "source": [
     "# @@@ Question 1: Here is a python list, initialize another list called b with the same values as a.\n",
-    "a = [1, 2, 3, 4, 5, 6]\n"
+    "a = [1, 2, 3, 4, 5, 6]\n",
+    "b = [1, 2, 3, 4, 5, 6]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "779d96b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 6]\n"
+     ]
+    }
+   ],
    "source": [
     "# @@@ Question 2: get a list containing the last 3 elements of b \n",
-    "# Yes, you can just type out [4, 5, 6] but we really want to see you demonstrate you know how to use list slicing in Python"
+    "# Yes, you can just type out [4, 5, 6] but we really want to see you demonstrate you know how to use list slicing in Python\n",
+    "last_three = b[-3:]\n",
+    "print(last_three)"
    ]
   },
   {
@@ -51,7 +62,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# @@@ Question 3: Create a list of numbers from 1 to 20"
+    "# @@@ Question 3: Create a list of numbers from 1 to 20\n",
+    "numbers = list(range(1, 21))\n",
+    "print(numbers)\n"
    ]
   },
   {
@@ -191,7 +204,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -205,12 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "6cf8df3ff69f85f626faf55c10df6fe2cb9d1236b4dc73844ee4dc01369c2c99"
-   }
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
